--- a/switchboardd/Cargo.toml
+++ b/switchboardd/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-switchboard = { path = "../../switchboard" }
+switchboard = { git = "https://github.com/nchashch/switchboard", rev = "59f94717b5a9ba6d5e67e6d9988d77caf1aae35b" }
 clap = { version = "4.0.1", features = ["derive"] }
 anyhow = "1.0.65"
 confy = "0.5.0"
