--- a/switchboard-cli/Cargo.toml
+++ b/switchboard-cli/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 bitcoin = "0.29.1"
 jsonrpsee = { version = "0.15.1", features = ["client"] }
-switchboard = { path = "../../switchboard" }
+switchboard = { git = "https://github.com/nchashch/switchboard", rev = "59f94717b5a9ba6d5e67e6d9988d77caf1aae35b" }
 clap = { version = "4.0.1", features = ["derive"] }
 anyhow = "1.0.65"
 confy = "0.5.0"
