--- a/switchboard-cli/Cargo.toml
+++ b/switchboard-cli/Cargo.toml
@@ -6,12 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bitcoin = "0.29.1"
-jsonrpsee = { version = "0.15.1", features = ["client"] }
 switchboard = { path = "../../switchboard" }
 clap = { version = "4.0.1", features = ["derive"] }
 anyhow = "1.0.65"
 confy = "0.5.0"
-tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
-serde_json = "1.0.87"
 dirs = "4.0.0"
+ureq-jsonrpc = { path = "../../ureq-jsonrpc" }
+web3 = "0.18.0"
+hex = "0.4.3"
+futures = "0.3.26"
+serde = { version = "1.0.152", features = ["derive"] }
+bitcoin = { version = "0.29.1", features = ["serde"] }
