--- a/switchboard-cli/Cargo.toml
+++ b/switchboard-cli/Cargo.toml
@@ -11,7 +11,7 @@ clap = { version = "4.0.1", features = ["derive"] }
 anyhow = "1.0.65"
 confy = "0.5.0"
 dirs = "4.0.0"
-ureq-jsonrpc = { path = "../../ureq-jsonrpc" }
+ureq-jsonrpc = { git = "https://github.com/nchashch/ureq-jsonrpc" }
 web3 = "0.18.0"
 hex = "0.4.3"
 futures = "0.3.26"
