--- a/switchboardd/Cargo.toml
+++ b/switchboardd/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-switchboard = { git = "https://github.com/nchashch/switchboard" }
+switchboard = { git = "https://github.com/nchashch/switchboard", rev = "5e4f575c1f58166933bab41ba2645b5c485a3d60" }
 clap = { version = "4.0.1", features = ["derive"] }
 anyhow = "1.0.65"
 confy = "0.5.0"
